# OpenGLTest

./: CMakeLists.txt
include/Game/: MainGame.h  Sprite.h
src/: main.cpp
src/Game/: MainGame.cpp  Sprite.cpp
